<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Vehicle_ImportFileActivity">
    <TextView
        android:id="@+id/title_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="109dp"
        android:layout_marginBottom="8dp"
        android:text="@string/titleFrame"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/xml_path"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.016" />

    <TextView
        android:id="@+id/xml_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="8dp"
        android:text="@string/xmlpath"
        android:textColor="@color/purple_700"
        app:layout_constraintBottom_toTopOf="@+id/xml_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/xml_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="16dp"
        android:onClick="buttonXmlFile"
        android:text="@string/btnxml"
        app:layout_constraintBottom_toTopOf="@+id/json_path"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/xml_path" />

    <TextView
        android:id="@+id/json_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="16dp"
        android:text="@string/jsonpath"
        android:textColor="@color/purple_700"
        app:layout_constraintBottom_toTopOf="@+id/json_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/xml_btn" />

    <Button
        android:id="@+id/json_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="16dp"
        android:onClick="buttonJsonFile"
        android:text="@string/btnjson"
        app:layout_constraintBottom_toTopOf="@+id/send_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/json_path" />

    <Button
        android:id="@+id/send_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="114dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="32dp"
        android:text="@string/sendFileList"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/json_btn" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="222dp"
        android:layout_height="153dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/xml_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/kisspng_2018_hyundai_tucson_2017_hyundai_tucson_hyundai_sa_blue_brochure_5ae93723c503b2_613252311525233443807" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="163dp"
        android:layout_marginBottom="30dp"
        android:textColor="#BC1010"
        app:layout_constraintBottom_toTopOf="@+id/send_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/json_btn" />

    <Button
        android:id="@+id/add_vehicle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="139dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="139dp"
        android:layout_marginBottom="29dp"
        android:clickable="true"
        android:text="@string/add_vehicle_btn"
        app:layout_constraintBottom_toTopOf="@+id/xml_path"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:onClick="addVehicle"/>
</androidx.constraintlayout.widget.ConstraintLayout>